{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 41,
  "lineage": "30d20707-74e0-1430-b266-f59c869a3405",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ac5a9b225e99b02",
            "arn": "arn:aws:ec2:eu-west-2:243218137774:instance/i-054171bfa0d341afe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054171bfa0d341afe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014c722decd50b186",
            "private_dns": "ip-10-0-0-6.eu-west-2.compute.internal",
            "private_ip": "10.0.0.6",
            "public_dns": "ec2-18-170-39-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.39.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0685d4ee66be29568",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-050ade302d8b78c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0983d523df7653a59",
            "tags": {
              "Name": "james-prod-web-01"
            },
            "tags_all": {
              "Name": "james-prod-web-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050ade302d8b78c40"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.servers",
            "module.vpc.aws_security_group.webservers",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ac5a9b225e99b02",
            "arn": "arn:aws:ec2:eu-west-2:243218137774:instance/i-01decae3a146bd51b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01decae3a146bd51b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad795e2a27b20703",
            "private_dns": "ip-10-0-208-12.eu-west-2.compute.internal",
            "private_ip": "10.0.208.12",
            "public_dns": "ec2-18-132-18-105.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.18.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec14cffa71b9aa96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-050ade302d8b78c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5b750db169ce234",
            "tags": {
              "Name": "james-prod-web-02"
            },
            "tags_all": {
              "Name": "james-prod-web-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050ade302d8b78c40"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.servers",
            "module.vpc.aws_security_group.webservers",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ac5a9b225e99b02",
            "arn": "arn:aws:ec2:eu-west-2:243218137774:instance/i-0d2f2ee161e5c505d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2f2ee161e5c505d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "servers",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0501f6efaf429e321",
            "private_dns": "ip-10-0-244-6.eu-west-2.compute.internal",
            "private_ip": "10.0.244.6",
            "public_dns": "ec2-3-8-22-55.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.22.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0875220eb72885022",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-050ade302d8b78c40"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026417c9f13b6ff3d",
            "tags": {
              "Name": "james-prod-web-03"
            },
            "tags_all": {
              "Name": "james-prod-web-03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050ade302d8b78c40"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.servers",
            "module.vpc.aws_security_group.webservers",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "james-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:internet-gateway/igw-020e6a2d6b34c071c",
            "id": "igw-020e6a2d6b34c071c",
            "owner_id": "243218137774",
            "tags": {
              "Name": "james-prod-igw"
            },
            "tags_all": {
              "Name": "james-prod-igw"
            },
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "dependencies": [
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "james-prod-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:243218137774:loadbalancer/app/james-prod-web-elb/e25f87abbab58670",
            "arn_suffix": "app/james-prod-web-elb/e25f87abbab58670",
            "dns_name": "james-prod-web-elb-1721361273.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:243218137774:loadbalancer/app/james-prod-web-elb/e25f87abbab58670",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "james-prod-web-elb",
            "security_groups": [
              "sg-050ade302d8b78c40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-026417c9f13b6ff3d"
              },
              {
                "subnet_id": "subnet-0983d523df7653a59"
              },
              {
                "subnet_id": "subnet-0d5b750db169ce234"
              }
            ],
            "subnets": [
              "subnet-026417c9f13b6ff3d",
              "subnet-0983d523df7653a59",
              "subnet-0d5b750db169ce234"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0843ae4fac1c75319",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.vpc.aws_security_group.webservers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "james-prod-rtbl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0509076e0d008d45d",
            "original_route_table_id": "rtb-05ac905cabc109ede",
            "route_table_id": "rtb-05a151244cd18b4cb",
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.james-igw",
            "module.vpc.aws_route_table.prod",
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:route-table/rtb-05a151244cd18b4cb",
            "id": "rtb-05a151244cd18b4cb",
            "owner_id": "243218137774",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020e6a2d6b34c071c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "james-prod-web-pub-rtbl"
            },
            "tags_all": {
              "Name": "james-prod-web-pub-rtbl"
            },
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.james-igw",
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "james-prod-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d9c4ae3662e63f6",
            "route_table_id": "rtb-05a151244cd18b4cb",
            "subnet_id": "subnet-0983d523df7653a59"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.james-igw",
            "module.vpc.aws_route_table.prod",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da8f407211fa37a",
            "route_table_id": "rtb-05a151244cd18b4cb",
            "subnet_id": "subnet-0d5b750db169ce234"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.james-prod-vpc",
            "module.vpc.aws_internet_gateway.james-igw",
            "module.vpc.aws_route_table.prod"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04be56870d45adb3b",
            "route_table_id": "rtb-05a151244cd18b4cb",
            "subnet_id": "subnet-026417c9f13b6ff3d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.james-prod-vpc",
            "module.vpc.aws_internet_gateway.james-igw",
            "module.vpc.aws_route_table.prod"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:security-group/sg-050ade302d8b78c40",
            "description": "allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050ade302d8b78c40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "james-prod-web-sg",
            "name_prefix": "",
            "owner_id": "243218137774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "james-prod-web-sg"
            },
            "tags_all": {
              "Name": "james-prod-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:subnet/subnet-0983d523df7653a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-0983d523df7653a59",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243218137774",
            "tags": {
              "Name": "james-prod-web-pub-subnet-a"
            },
            "tags_all": {
              "Name": "james-prod-web-pub-subnet-a"
            },
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "dependencies": [
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:subnet/subnet-0d5b750db169ce234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.208.0/28",
            "id": "subnet-0d5b750db169ce234",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243218137774",
            "tags": {
              "Name": "james-prod-web-pub-subnet-b"
            },
            "tags_all": {
              "Name": "james-prod-web-pub-subnet-b"
            },
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "dependencies": [
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:subnet/subnet-026417c9f13b6ff3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.244.0/28",
            "id": "subnet-026417c9f13b6ff3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243218137774",
            "tags": {
              "Name": "james-prod-web-pub-subnet-c"
            },
            "tags_all": {
              "Name": "james-prod-web-pub-subnet-c"
            },
            "vpc_id": "vpc-0843ae4fac1c75319"
          },
          "dependencies": [
            "module.vpc.aws_vpc.james-prod-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "james-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:243218137774:vpc/vpc-0843ae4fac1c75319",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0301d956d4b8a5993",
            "default_route_table_id": "rtb-05a151244cd18b4cb",
            "default_security_group_id": "sg-09605a7e172f5eeae",
            "dhcp_options_id": "dopt-049e336c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0843ae4fac1c75319",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a151244cd18b4cb",
            "owner_id": "243218137774",
            "tags": {
              "Name": "james-prod-vpc"
            },
            "tags_all": {
              "Name": "james-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}